<resources>
    <string name="app_name">NEGA Restaurant Scores</string>
    <string name="action_settings">Settings</string>
    <string name="restaurantNameListView">Name</string>
    <string name="restaurantAddressListView">HomeTown</string>
    <string name="submit_county_selection">Show Restaurants</string>
    <string name="submit_restaurant_selection">Search</string>
    <string name="title_activity_maps">Inspection Report</string>
    <string name="title_activity_runtime_permissions_fragment">RuntimePermissionsFragment</string>
    <string name="title_activity_runtime_permissions">RuntimePermissions</string>
    <string name="no_geocoder_available">Unable to geocode restaurant address</string>
    <string name="address_found">Address located</string>
    <string name="no_address_found">No address found</string>
    <string name="invalid_lat_long_used">Invalid coordinates provided</string>
    <string name="service_not_available">Geocoding service not available</string>
    <string name="operation_failure">Operation to retrieve coordinates failed</string>
    <string name="no_geocoded_address_found">Unable to geocode address</string>
    <string name="restaurants_in_county_label">Restaurants In County</string>

    <string name="task_complete_notification_title_template">Task complete: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="task_complete_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="ne_ga_restaurants">NEGA Restaurants</string>
    <string name="yelp_logo_desc">Yelp Logo</string>
    <string name="yelp_restaurant_rating">Yelp Restaurant Rating</string>
    <string name="last_inspection_date_label">Last Inspection Date: </string>
    <string name="score_label">Score</string>
    <string name="non_critical_violations_text">%d non-critical violations</string>
    <string name="critical_violations_text">%d critical violations</string>
    <string name="select_county_label">Select County</string>
    <string name="critical_violations_label">Critical Violations:</string>
    <string name="non_critical_violations_label">Non-Critical Violations:</string>
    <string name="greencheckmark_contentdescriptor">Score above 90 without critical violations</string>
    <string name="redx_contentdescriptor">Has at least 1 critical violations</string>
    <string name="yellowcheckmark_contentdescriptor">Score under 90 without any critical violations</string>
    <string name="map_marker_snippet">Tap the marker to activate map controls</string>
    <string name="title_activity_restaurant_violations">RestaurantViolations</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_county_main_activity">Select County</string>
    <string name="restaurant_violations_title">Health Code Violations</string>
    <string name="critical_violations_tab">Critical</string>
    <string name="non_critical_violations_tab">Non-Critical</string>
    <string name="healthcode_violations_button_label">HealthCode Violations</string>
    <string name="checkmark_description">Checkmark</string>
    <string name="action_legal">Disclaimer</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_legal">Disclaimer</string>

    <string name="checkmark_desc">Green means no critical violations and a score of >= 90. Red means >= 1 or more critical violations. Yellow means a score below 90 and no critical violations.</string>
    <string name="dataCredit">Data from <a href="http://publichealthathens.com/">PublicHealthAthens.com</a></string>
    <string name="jsoupCredit">Data parsed with <strong><a href="http://jsoup.org/">jsoup</a></strong></string>
    <string name="yelpCreditText">Restaurant rating data from <a href="https://www.yelp.com/static?p=tos">Yelp</a>.</string>

    <!-- https://stackoverflow.com/questions/3235131/set-textview-text-from-html-formatted-string-resource-in-xml/18199543#18199543 -->
    <string name="legalese">
        Please note that <a href="http://publichealthathens.com/">PublicHealthAthens.com</a> is the canonical and most-up-to-date source of information on the restaurant health inspection data. By using this app, you agree to indemnify and hold me, relatives, descendants, my neighbors, friends, and  my dearly departed pet harmless from any events that result from using the application.\n\n
        The green, red, and yellow icons are indicators of the restaurant\'s score. The information on how these restaurants are scored is available on <a href="http://publichealthathens.com/">PublicHealthAthens.com</a>. Captured here as of 09/16/2017, green means no critical violations and a score of >= 90. Red means >= 1 or more critical violations. Yellow means a score below 90 but not in the red.\n\n
        This app also consumes data from <a href="https://www.yelp.com/static?p=tos">Yelp</a>. Specifically, the Yelp stars shown when viewing some restaurants comes from yelp.com and Yelp.com is the canonical source for rating information. The ratings data shown are not guaranteed to match the actual restaurant being viewed.\n\n
        Internet connectivity is required to use this application. The restaurant information data is fetched from Firebase (<a href="https://firebase.google.com/terms/">TOS</a>) and is temporarily cached on your device. You agree to bear the cost of any charges associated with the requirement for internet connectivity on your device.\n\n
        Other third party services in use include: Google Maps API for displaying the restaurant location (<a href="https://developers.google.com/maps/terms">TOS</a>), Firebase Crash Reporting (<a href="https://firebase.google.com/docs/crash/#user_privacy">which does not collect any personally identifiable information</a>), Fabric (<a href="https://fabric.io/terms">TOS</a>) for monitoring the app\'s stability and either <a href="https://www.heroku.com/policy/tos">Heroku </a> or <a href="https://aws.amazon.com/elasticsearch-service/">AWS</a> Elastic Search service powers the restaurant name search.
    </string>
    <string name="about_app">
        Made with duct tape, super glue, and love by <b><a href="http://janeullah.com/">Jane Ullah</a></b>\n\n
        Some details:\n\n
        1. Data was scraped from the websites below using a Spring application that makes use of Jsoup. This data was then transformed into the format needed for consumption by this application and for use with Firebase\n\n
        2. Direct links to the County restaurant reports: <a href="http://publichealthathens.com/healthscores/Barrow_county_restaurant_scores.html">Barrow</a>,
        <a href="http://publichealthathens.com/healthscores/Elbert_county_restaurant_scores.html">Elbert</a>,
        <a href="http://publichealthathens.com/healthscores/Clarke_county_restaurant_scores.html">Clarke</a>,
        <a href="http://publichealthathens.com/healthscores/Greene_county_restaurant_scores.html">Greene</a>,
        <a href="http://publichealthathens.com/healthscores/Jackson_county_restaurant_scores.html">Jackson</a>,
        <a href="http://publichealthathens.com/healthscores/Madison_county_restaurant_scores.html">Madison</a>,
        <a href="http://publichealthathens.com/healthscores/Morgan_county_restaurant_scores.html">Morgan</a>,
        <a href="http://publichealthathens.com/healthscores/Oconee_county_restaurant_scores.html">Oconee</a>,
        <a href="http://publichealthathens.com/healthscores/Oglethorpe_county_restaurant_scores.html">Oglethorpe</a>, and
        <a href="http://publichealthathens.com/healthscores/Walton_county_restaurant_scores.html">Walton</a>
    </string>
    <string name="search_hint">Search restaurant name</string>
    <string name="app_label">Search by restaurant name</string>
    <string name="title_activity_restaurant_name_search">Restaurant Search Results</string>
</resources>
