<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.janeullah.apps.healthinspectionviewer.activities.HomeActivity">

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_legal"
        android:orderInCategory="101"
        android:title="@string/action_legal"
        app:showAsAction="never" />
    <!--
        android:actionViewClass="android.widget.SearchView" -->
    <item android:id="@+id/menu_search"
        android:title="@string/search_hint"
        android:icon="@drawable/ic_action_search"
        android:visible="false"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
</menu>
