<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.janeullah.apps.healthinspectionviewer.activities.RestaurantNameSearchActivity"
    tools:showIn="@layout/activity_restaurant_name_search">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/restaurants_search_listing_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="1dp"
        android:paddingLeft="3dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_flattenedrestaurant"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>
